--- a/.env
+++ b/.env
@@ -7,3 +7,12 @@ JWT_SECRET="b51eef8b-5778-4db2-9012-ed2fb314d956"
 # CORS ORIGIN
 
 CORS_ORIGIN="http://localhost:3000"
+
+# MARVEL BASE API
+
+MARVEL_API="http://gateway.marvel.com/v1/public/"
+
+# MARVEL AUTH
+
+MARVEL_PRIVATE_KEY="6b031230a044d6c39e3081a437a58d6ff1d00266"
+MARVEL_PUBLIC_KEY="34020c32b3273575765935b18a51df15"
