--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/md5": "^2.3.5",
     "@types/validator": "^13.11.9",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
@@ -22,6 +23,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.1",
     "jsonwebtoken": "^9.0.2",
+    "md5": "^2.3.0",
     "mongoose": "^8.2.2",
     "validator": "^13.11.0"
   },
