--- a/package.json
+++ b/package.json
@@ -6,25 +6,31 @@
   "scripts": {
     "start": "nodemon ./main.ts",
     "prod": "ts-node ./main.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@jest/globals": "^29.7.0",
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
+    "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/md5": "^2.3.5",
+    "@types/supertest": "^6.0.2",
     "@types/validator": "^13.11.9",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.1",
+    "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "md5": "^2.3.0",
     "mongoose": "^8.2.2",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.1.2",
     "validator": "^13.11.0"
   },
   "devDependencies": {
