--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
     "ts-jest": "^29.1.2",
+    "typescript": "^5.4.5",
     "validator": "^13.11.0"
   },
   "devDependencies": {
