--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "cluster": "ts-node cluster.ts",
     "start": "nodemon ./main.ts",
     "prod": "ts-node ./main.ts",
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "cannon": "npx autocannon -c 500 -d 20 -w 10 --renderStatusCodes --latency --warmup [ -c 1 -d 2 ] localhost:3000/comics/getnames > ./carga/carga.txt"
   },
   "author": "",
   "license": "ISC",
